--- a/user/templates/profile_info.html
+++ b/user/templates/profile_info.html
@@ -30,22 +30,24 @@
                             <td>Email :</td>
                             <td>{{ user.email }}</td>
                         </tr>
-                        <tr>
-                            <td>Date of Birth :</td>
-                            <td>{{ user.profile.dob }}</td>
-                        </tr>
-                        <tr>
-                            <td>City :</td>
-                            <td>{{ user.profile.city }}</td>
-                        </tr>
-                        <tr>
-                            <td>Country :</td>
-                            <td>{{ user.profile.country }}</td>
-                        </tr>
-                        <tr>
-                            <td>Mobile # :</td>
-                            <td>{{ user.profile.phone }}</td>
-                        </tr>
+                        {% if is_self or is_friend %}
+                            <tr>
+                                <td>Date of Birth :</td>
+                                <td>{{ user.profile.dob }}</td>
+                            </tr>
+                            <tr>
+                                <td>City :</td>
+                                <td>{{ user.profile.city }}</td>
+                            </tr>
+                            <tr>
+                                <td>Country :</td>
+                                <td>{{ user.profile.country }}</td>
+                            </tr>
+                            <tr>
+                                <td>Mobile # :</td>
+                                <td>{{ user.profile.phone }}</td>
+                            </tr>
+                        {% endif %}
                         </tbody>
                     </table>
 
@@ -87,7 +89,7 @@
             </div>
         </div>
 
-        {% if user.id == request.user.id %}
+        {% if is_self %}
             <div class="col-xs-12">
                 <div class="panel panel-default">
                     <div class="panel-heading text-center"> Friends</div>
@@ -166,42 +168,44 @@
 
         {% endif %}
 
-        <div class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center"> Discussions</div>
-                <div class="panel-body">
-                    <table class="table table-bordered table-hover">
-                        <thead>
-                        <tr>
-                            <th class="text-center">Sr.</th>
-                            <th>Topic</th>
-                            <th>Created By</th>
-                            <th class="text-center">Actions</th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        {% for d in discussions %}
+        {% if is_self or is_friend %}
+            <div class="col-xs-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading text-center"> Discussions</div>
+                    <div class="panel-body">
+                        <table class="table table-bordered table-hover">
+                            <thead>
                             <tr>
-                                <td class="text-center">{{ forloop.counter }}</td>
-                                <td>{{ d.topic }}</td>
-                                <td>
-                                    <a href="{% url 'profileinfo' id=d.created_by.id %}">
-                                        {{ d.created_by.profile.real_name }}
-                                    </a>
-                                </td>
-                                <td class="text-center">
-                                    <a href="{% url 'view_discussion' id=d.id %}" class="btn btn-default">
-                                        Go to discussion
-                                    </a>
-                                </td>
+                                <th class="text-center">Sr.</th>
+                                <th>Topic</th>
+                                <th>Created By</th>
+                                <th class="text-center">Actions</th>
                             </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
+                            </thead>
+
+                            <tbody>
+                            {% for d in discussions %}
+                                <tr>
+                                    <td class="text-center">{{ forloop.counter }}</td>
+                                    <td>{{ d.topic }}</td>
+                                    <td>
+                                        <a href="{% url 'profileinfo' id=d.created_by.id %}">
+                                            {{ d.created_by.profile.real_name }}
+                                        </a>
+                                    </td>
+                                    <td class="text-center">
+                                        <a href="{% url 'view_discussion' id=d.id %}" class="btn btn-default">
+                                            Go to discussion
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 
 {% endblock contents %}
