Issue with friend request from and to is resolved as well as private data

--- a/user/templates/profile_info.html
+++ b/user/templates/profile_info.html
@@ -111,7 +111,7 @@
                                         <thead>
                                         <tr>
                                             <th class="text-center">Sr.</th>
-                                            <th>Request To</th>
+                                            <th>Real Name</th>
                                             <th>Sent at</th>
                                             <th>Accepted at</th>
                                         </tr>
